<resources>
    <string name="app_name">FlipGame</string>
    <string name="red">RED</string>
    <string name="black">BLACK</string>
    <string name="choose_color">Choose color</string>
    <string name="zero">0</string>
    <string name="slash">/</string>
    <string name="desc_game">Guess the color on the card</string>
    <string name="back_image">back image</string>
    <string name="start">Start</string>
</resources>